--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,6 +65,6 @@ dependencies {
 // status bar changer
     implementation "com.google.accompanist:accompanist-systemuicontroller:0.27.0"
 
-    //navigation
-    implementation "androidx.navigation:navigation-compose:2.5.0-rc01"
+    def nav_version = "2.5.3"
+    implementation("androidx.navigation:navigation-compose:$nav_version")
 }
